src/antlr/ParserTParser.java
// Generated from ParserT.g4 by ANTLR 4.7.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParserTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, PRINT=2, READ=3, CHAR=4, INT=5, REAL=6, VOID=7, BOOLEAN=8, MAT_SIMBOLS=9, 
		PLUS=10, MINUS=11, MULT=12, DIV=13, POW=14, ASSIGN=15, OP_SIMBOLS=16, 
		AND=17, OR=18, NOT=19, EQUAL=20, NOT_EQUAL=21, GREATER=22, LESSER=23, 
		GREATER_OR_EQUAL=24, LESSER_OR_EQUAL=25, BRACE_OPEN=26, BRACE_CLOSE=27, 
		BRACKET_OPEN=28, BRACKET_CLOSE=29, PAR_OPEN=30, PAR_CLOSE=31, SEMICOLON=32, 
		COMMA=33, IF=34, ELSE=35, DO=36, WHILE=37, FOR=38, NULL=39, RETURN=40, 
		CONSTANT=41, VAL_BOOLEAN=42, PI=43, FACT=44, MOD=45, SIN=46, COS=47, NAME_VAR=48, 
		NUMBER=49, WORDS=50, WS=51;
	public static final int
		RULE_program = 0, RULE_codigo = 1, RULE_declaracion = 2, RULE_escribir = 3, 
		RULE_leer = 4, RULE_si = 5, RULE_hacer_mientras = 6, RULE_mientras = 7, 
		RULE_para = 8, RULE_reasignar = 9, RULE_funcion_matematica = 10, RULE_condicion = 11, 
		RULE_calculo = 12, RULE_bloque = 13;
	public static final String[] ruleNames = {
		"program", "codigo", "declaracion", "escribir", "leer", "si", "hacer_mientras", 
		"mientras", "para", "reasignar", "funcion_matematica", "condicion", "calculo", 
		"bloque"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'main'", "'nyetak'", "'maca'", "'watak'", "'babak'", "'nyata'", 
		"'void'", "'bool'", null, "'+'", "'-'", "'*'", "'/'", "'^'", "'='", null, 
		"'&'", "'|'", "'!'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'{'", 
		"'}'", "'['", "']'", "'('", "')'", "';'", "','", "'yen'", "'liyane'", 
		"'nggawe'", "'nalika'", "'kangoo'", "'NULL'", "'bali'", "'pancet'", null, 
		"'3,14159265358'", "'FACT'", "'MOD'", "'SIN'", "'COS'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MAIN", "PRINT", "READ", "CHAR", "INT", "REAL", "VOID", "BOOLEAN", 
		"MAT_SIMBOLS", "PLUS", "MINUS", "MULT", "DIV", "POW", "ASSIGN", "OP_SIMBOLS", 
		"AND", "OR", "NOT", "EQUAL", "NOT_EQUAL", "GREATER", "LESSER", "GREATER_OR_EQUAL", 
		"LESSER_OR_EQUAL", "BRACE_OPEN", "BRACE_CLOSE", "BRACKET_OPEN", "BRACKET_CLOSE", 
		"PAR_OPEN", "PAR_CLOSE", "SEMICOLON", "COMMA", "IF", "ELSE", "DO", "WHILE", 
		"FOR", "NULL", "RETURN", "CONSTANT", "VAL_BOOLEAN", "PI", "FACT", "MOD", 
		"SIN", "COS", "NAME_VAR", "NUMBER", "WORDS", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ParserT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(ParserTParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ParserTParser.INT, i);
		}
		public TerminalNode MAIN() { return getToken(ParserTParser.MAIN, 0); }
		public List<TerminalNode> BRACE_OPEN() { return getTokens(ParserTParser.BRACE_OPEN); }
		public TerminalNode BRACE_OPEN(int i) {
			return getToken(ParserTParser.BRACE_OPEN, i);
		}
		public List<TerminalNode> BRACE_CLOSE() { return getTokens(ParserTParser.BRACE_CLOSE); }
		public TerminalNode BRACE_CLOSE(int i) {
			return getToken(ParserTParser.BRACE_CLOSE, i);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public List<TerminalNode> NAME_VAR() { return getTokens(ParserTParser.NAME_VAR); }
		public TerminalNode NAME_VAR(int i) {
			return getToken(ParserTParser.NAME_VAR, i);
		}
		public List<TerminalNode> CHAR() { return getTokens(ParserTParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(ParserTParser.CHAR, i);
		}
		public List<TerminalNode> REAL() { return getTokens(ParserTParser.REAL); }
		public TerminalNode REAL(int i) {
			return getToken(ParserTParser.REAL, i);
		}
		public List<TerminalNode> VOID() { return getTokens(ParserTParser.VOID); }
		public TerminalNode VOID(int i) {
			return getToken(ParserTParser.VOID, i);
		}
		public List<TerminalNode> BOOLEAN() { return getTokens(ParserTParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(ParserTParser.BOOLEAN, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(INT);
			setState(29);
			match(MAIN);
			setState(30);
			match(BRACE_OPEN);
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(31);
				codigo();
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << READ) | (1L << CHAR) | (1L << INT) | (1L << REAL) | (1L << BOOLEAN) | (1L << IF) | (1L << DO) | (1L << WHILE) | (1L << FOR) | (1L << CONSTANT) | (1L << NAME_VAR))) != 0) );
			setState(36);
			match(BRACE_CLOSE);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << INT) | (1L << REAL) | (1L << VOID) | (1L << BOOLEAN))) != 0)) {
				{
				{
				setState(37);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << INT) | (1L << REAL) | (1L << VOID) | (1L << BOOLEAN))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(38);
				match(NAME_VAR);
				setState(39);
				match(BRACE_OPEN);
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(40);
					codigo();
					}
					}
					setState(43); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << READ) | (1L << CHAR) | (1L << INT) | (1L << REAL) | (1L << BOOLEAN) | (1L << IF) | (1L << DO) | (1L << WHILE) | (1L << FOR) | (1L << CONSTANT) | (1L << NAME_VAR))) != 0) );
				setState(45);
				match(BRACE_CLOSE);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public EscribirContext escribir() {
			return getRuleContext(EscribirContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public Hacer_mientrasContext hacer_mientras() {
			return getRuleContext(Hacer_mientrasContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public ReasignarContext reasignar() {
			return getRuleContext(ReasignarContext.class,0);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codigo);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHAR:
			case INT:
			case REAL:
			case BOOLEAN:
			case CONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declaracion();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				escribir();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				leer();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(55);
				si();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 5);
				{
				setState(56);
				hacer_mientras();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 6);
				{
				setState(57);
				mientras();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 7);
				{
				setState(58);
				para();
				}
				break;
			case NAME_VAR:
				enterOuterAlt(_localctx, 8);
				{
				setState(59);
				reasignar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(ParserTParser.CHAR, 0); }
		public List<TerminalNode> NAME_VAR() { return getTokens(ParserTParser.NAME_VAR); }
		public TerminalNode NAME_VAR(int i) {
			return getToken(ParserTParser.NAME_VAR, i);
		}
		public TerminalNode SEMICOLON() { return getToken(ParserTParser.SEMICOLON, 0); }
		public TerminalNode CONSTANT() { return getToken(ParserTParser.CONSTANT, 0); }
		public TerminalNode ASSIGN() { return getToken(ParserTParser.ASSIGN, 0); }
		public TerminalNode WORDS() { return getToken(ParserTParser.WORDS, 0); }
		public TerminalNode NUMBER() { return getToken(ParserTParser.NUMBER, 0); }
		public TerminalNode INT() { return getToken(ParserTParser.INT, 0); }
		public Funcion_matematicaContext funcion_matematica() {
			return getRuleContext(Funcion_matematicaContext.class,0);
		}
		public TerminalNode REAL() { return getToken(ParserTParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(ParserTParser.BOOLEAN, 0); }
		public TerminalNode VAL_BOOLEAN() { return getToken(ParserTParser.VAL_BOOLEAN, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONSTANT) {
					{
					setState(62);
					match(CONSTANT);
					}
				}

				setState(65);
				match(CHAR);
				setState(66);
				match(NAME_VAR);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(67);
					match(ASSIGN);
					setState(68);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME_VAR) | (1L << NUMBER) | (1L << WORDS))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(71);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONSTANT) {
					{
					setState(72);
					match(CONSTANT);
					}
				}

				setState(75);
				match(INT);
				setState(76);
				match(NAME_VAR);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(77);
					match(ASSIGN);
					setState(81);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case NAME_VAR:
						{
						setState(78);
						match(NAME_VAR);
						}
						break;
					case NUMBER:
						{
						setState(79);
						match(NUMBER);
						}
						break;
					case FACT:
					case MOD:
						{
						setState(80);
						funcion_matematica();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				setState(85);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONSTANT) {
					{
					setState(86);
					match(CONSTANT);
					}
				}

				setState(89);
				match(REAL);
				setState(90);
				match(NAME_VAR);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(91);
					match(ASSIGN);
					setState(92);
					_la = _input.LA(1);
					if ( !(_la==NAME_VAR || _la==NUMBER) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(95);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONSTANT) {
					{
					setState(96);
					match(CONSTANT);
					}
				}

				setState(99);
				match(BOOLEAN);
				setState(100);
				match(NAME_VAR);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(101);
					match(ASSIGN);
					setState(102);
					_la = _input.LA(1);
					if ( !(_la==VAL_BOOLEAN || _la==NAME_VAR) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(105);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscribirContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(ParserTParser.PRINT, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(ParserTParser.SEMICOLON, 0); }
		public TerminalNode NAME_VAR() { return getToken(ParserTParser.NAME_VAR, 0); }
		public TerminalNode WORDS() { return getToken(ParserTParser.WORDS, 0); }
		public EscribirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escribir; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitEscribir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscribirContext escribir() throws RecognitionException {
		EscribirContext _localctx = new EscribirContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_escribir);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PRINT);
			setState(109);
			match(PAR_OPEN);
			setState(110);
			_la = _input.LA(1);
			if ( !(_la==NAME_VAR || _la==WORDS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(111);
			match(PAR_CLOSE);
			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeerContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(ParserTParser.READ, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public TerminalNode NAME_VAR() { return getToken(ParserTParser.NAME_VAR, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(ParserTParser.SEMICOLON, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitLeer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(READ);
			setState(115);
			match(PAR_OPEN);
			setState(116);
			match(NAME_VAR);
			setState(117);
			match(PAR_CLOSE);
			setState(118);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ParserTParser.IF, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public List<TerminalNode> BRACE_OPEN() { return getTokens(ParserTParser.BRACE_OPEN); }
		public TerminalNode BRACE_OPEN(int i) {
			return getToken(ParserTParser.BRACE_OPEN, i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public List<TerminalNode> BRACE_CLOSE() { return getTokens(ParserTParser.BRACE_CLOSE); }
		public TerminalNode BRACE_CLOSE(int i) {
			return getToken(ParserTParser.BRACE_CLOSE, i);
		}
		public TerminalNode ELSE() { return getToken(ParserTParser.ELSE, 0); }
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_si);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(IF);
			setState(121);
			match(PAR_OPEN);
			setState(122);
			condicion(0);
			setState(123);
			match(PAR_CLOSE);
			setState(124);
			match(BRACE_OPEN);
			setState(125);
			bloque();
			setState(126);
			match(BRACE_CLOSE);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(127);
				match(ELSE);
				setState(128);
				match(BRACE_OPEN);
				setState(129);
				bloque();
				setState(130);
				match(BRACE_CLOSE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hacer_mientrasContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(ParserTParser.DO, 0); }
		public TerminalNode BRACE_OPEN() { return getToken(ParserTParser.BRACE_OPEN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode BRACE_CLOSE() { return getToken(ParserTParser.BRACE_CLOSE, 0); }
		public TerminalNode WHILE() { return getToken(ParserTParser.WHILE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(ParserTParser.SEMICOLON, 0); }
		public Hacer_mientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hacer_mientras; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitHacer_mientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Hacer_mientrasContext hacer_mientras() throws RecognitionException {
		Hacer_mientrasContext _localctx = new Hacer_mientrasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_hacer_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(DO);
			setState(135);
			match(BRACE_OPEN);
			setState(136);
			bloque();
			setState(137);
			match(BRACE_CLOSE);
			setState(138);
			match(WHILE);
			setState(139);
			match(PAR_OPEN);
			setState(140);
			condicion(0);
			setState(141);
			match(PAR_CLOSE);
			setState(142);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(ParserTParser.WHILE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public TerminalNode BRACE_OPEN() { return getToken(ParserTParser.BRACE_OPEN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode BRACE_CLOSE() { return getToken(ParserTParser.BRACE_CLOSE, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitMientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(WHILE);
			setState(145);
			match(PAR_OPEN);
			setState(146);
			condicion(0);
			setState(147);
			match(PAR_CLOSE);
			setState(148);
			match(BRACE_OPEN);
			setState(149);
			bloque();
			setState(150);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(ParserTParser.FOR, 0); }
		public TerminalNode PAR_OPEN() { return getToken(ParserTParser.PAR_OPEN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ParserTParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserTParser.COMMA, i);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public CalculoContext calculo() {
			return getRuleContext(CalculoContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(ParserTParser.PAR_CLOSE, 0); }
		public TerminalNode BRACE_OPEN() { return getToken(ParserTParser.BRACE_OPEN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode BRACE_CLOSE() { return getToken(ParserTParser.BRACE_CLOSE, 0); }
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public TerminalNode NAME_VAR() { return getToken(ParserTParser.NAME_VAR, 0); }
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitPara(this);
			else return visitor.visitChildren(this);
		}
	}
